# engineio_cpp

./: CMakeLists.txt  README.md
engineio/: CMakeLists.txt  packet.h  parser.cc  parser.h  server.cc  server.h  socket.cc  socket.h  transport.cc  transport.h
engineio/base/: json_util.h
engineio/transports/: polling.cc  polling.h  polling_jsonp.h  polling_xhr.cc  polling_xhr.h  transport_factory.h  websocket.cc  websocket.h
engineio/woody/: CMakeLists.txt  base_handler.h
engineio/woody/http/: http_codec.cc  http_handler.cc  http_handler.h  http_request.cc  http_request.h
engineio/woody/websocket/: websocket_handler.cc  websocket_handler.h  websocket_server.cc  websocket_server.h
example/: CMakeLists.txt
example/chat/: CMakeLists.txt  chat.html  server.cc
example/chat/static/: index.js
example/latency/: CMakeLists.txt  server.cc
example/latency/static/: index.js
example/simple/: CMakeLists.txt  chat.html  server.cc
lib/: CMakeLists.txt
lib/woody/http/: http_codec.cc  http_codec.h  http_request.h  http_response.cc  http_response.h  http_server.cc
