PROJECT(engineio)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_DEFINITIONS(-O3 -Wall -g)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/engineio)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/engineio/woody/lib)
#LINK_DIRECTORIES(/usr/local/lib/muduo)

ADD_SUBDIRECTORY(engineio)
ADD_SUBDIRECTORY(example)
#ADD_SUBDIRECTORY(test)

